Update class 3 for 2013-1